[gd_scene load_steps=4 format=3 uid="uid://bobrutb83r27e"]

[ext_resource type="Script" uid="uid://dklysmwy1heo2" path="res://components/SettingsManagerMultiView/SettingsManagerMultiView.gd" id="1_kje12"]
[ext_resource type="PackedScene" uid="uid://bf3cbsyaotnnq" path="res://components/Table/Table.tscn" id="2_0b5xi"]
[ext_resource type="PackedScene" uid="uid://kjup3yrjifr5" path="res://components/SettingsManagerView/SettingsManagerView.tscn" id="3_h5qm2"]

[node name="SettingsManagerMultiView" type="PanelContainer" node_paths=PackedStringArray("table", "settings_manager_view")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kje12")
table = NodePath("HSplitContainer/Table")
settings_manager_view = NodePath("HSplitContainer/ScrollContainer/SettingsManagerView")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = -140

[node name="Table" parent="HSplitContainer" instance=ExtResource("2_0b5xi")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsManagerView" parent="HSplitContainer/ScrollContainer" instance=ExtResource("3_h5qm2")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="selection_changed" from="HSplitContainer/Table" to="." method="_on_table_selection_changed"]
